force-app/main/default/objects/Bike__c/fields/Bike_Type__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type__c</fullName>
    <defaultValue>&quot;Hybrid&quot;</defaultValue>
    <label>Bike Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>